--- a/src/app/cocktail-list/cocktail-list.component.html
+++ b/src/app/cocktail-list/cocktail-list.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let cocktail of cocktails" >
     <div class="cocktailCard">
-        <p> {{cocktail.name | uppercase}} </p>
+        <p> {{cocktail.name}} </p>
         <p> {{cocktail.price}} € </p>
         <img [src]="cocktail.img" [alt]="cocktail.name">
     </div>
